             been fixed.

 * various:
   - [NEW]   A new convenience feature has been added, to allow automatic
             normalization of metadata strings. Useful if the majority of
             files come from a broken encoder/tagging program. Disabled
             by default, this feature can be enabled with the new `-n'
             command line parameter.
   - [MISC]  Add new --enable-debug configuration option to the configure
             script, which enables (also new) memory debugging features.
             (Not interesting for non-developers.)



Changes in 0.4.3, released on 2007-07-24:

 * src/ezstream.c:
   - [FIX]   Plug the file descriptor leak, partially fixed in version 0.4.1,
             for good - it affected more than just the -q use case.



Changes in 0.4.2, released on 2007-07-17:

 * src/ezstream.c:
   - [FIX]   Make <stream_once/> work with playlists, too. Problem found by
             Geoff Shang <geoff at quitelikely dot com>.



Changes in 0.4.1, released on 2007-07-15:

 * src/ezstream.c:
   - [FIX]   Plug a file descriptor leak when using the -q parameter.

 * Documentation:
   - [FIX]   Minor spelling/consistency fixes.



Changes in 0.4.0, released on 2007-03-11:

 * src/util.*:
   - [FIX]   The xfree() function did not work as intended due to a programming
             error. Found, and fix suggested, by Karl Heyes.

 * src/playlist.*:
   - [FIX]   An error compareable to the one about xfree() in src/util.* has
             been fixed.
   - [MISC]  Refuse to execute a group- or world-writeable playlist script or
             program.

 * src/compat.c:
   - [ADD]   Implement a basename() function for Windows that behaves like the
             ones used on Unix systems.

 * win32/:
   - [MISC]  Remove the rather ugly HTML version of the man page from the
             distribution, and provide a much better PDF version instead.

 * various:
   - [ADD]   Allow ezstream to use TagLib for reading metadata from media